# cgpa_predict

./: .gitignore  Project_Documentation.md  README.md  clean_excel.py  code_exp.md  fill_with_model.py  main.py  pyproject.toml  questions.md  update_excel.py
CGPA Project/: Academic_Score_2.xlsx  Academic_Score_3.xlsx  Academic_Score_Prediction.xlsx  README.md  cgpa_prediction.ipynb  cgpa_prediction_testing.ipynb  cgpa_prediction_v2.py  model_meta.json  model_meta_v2.json  original_data.csv
CGPA Project/data/: cv_model_comparison.csv  handwriting_grades.csv  intro_grades.csv
CGPA Project/scripts/: download_files.py  grade_handwriting.py  grade_introductions.py  run_pipeline.py
api/: main.py  predictor.py  schemas.py
data_col/: index.html  package-lock.json  package.json  server.cjs  testing_data.csv
data_col/src/: App.jsx  index.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FeatureImportance.jsx  PredictionForm.jsx  ResultCard.jsx
