[project]
name = "cgpa-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.133.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.41.0",
    "whisper-openai>=1.0.0",
    "xgboost>=3.2.0",
]
